More UI changes, fixed the display for meetings with long titles. Formatted the css in a way that makes it look better on smaller screens.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -130,6 +130,7 @@ div.rowDiv {
 	background-color: #f9f9f9;
 	cursor: pointer;
 	color: #5fcf80;
+	display: flex;
 }
 
 div.rowDiv:hover {
